syntax = "proto3";

package rpc;

message RemoteCallReq
{
    int32 MsgId = 1;
	bytes Data = 2;
	int64 CallId = 3;
}

message RemoteCallAck
{
	int32 MsgId = 1;
	bytes Data = 2;
	int64 CallId = 3;
}