syntax = "proto3";

package msgProto;

message ChatReq 
{
	string Content = 1;
}

message ChatAck
{
	string Content = 1;
}

message TestAck
{
	string Dummy = 1;
}
