syntax = "proto3";

package msgProto;

// chat service
//-----------------------------------------------------------------------------
message ContentReq
{
    string Msg = 1;
    int32 Value = 2;
}

message ContentAck
{
	string Msg = 1;
	int32 Value = 2;
}

//-----------------------------------------------------------------------------

